# ROS_my_control

devel/: .catkin  .rosinstall  setup.sh
devel/include/my_service/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/include/my_test/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/include/service_client/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/include/service_client_server/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/lib/my_service/: service_AddTwoInts
devel/lib/my_test/: pid  pub  service  sub  sub_pub
devel/lib/pkgconfig/: my_service.pc  my_test.pc  ros_mobile_robot.pc  service_client.pc  service_client_server.pc
devel/lib/python3/dist-packages/my_service/srv/: _AddTwoInts.py
devel/lib/python3/dist-packages/my_test/srv/: _AddTwoInts.py
devel/lib/python3/dist-packages/service_client/srv/: _AddTwoInts.py
devel/lib/python3/dist-packages/service_client_server/srv/: _AddTwoInts.py
devel/lib/service_client/: AddTwoInts_client  AddTwoInts_server
devel/lib/service_client_server/: AddTwoInts_client  AddTwoInts_server
devel/share/common-lisp/ros/my_service/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  my_service-srv.asd
devel/share/common-lisp/ros/my_test/srv/: AddTwoInts.lisp  _package.lisp  my_test-srv.asd
devel/share/common-lisp/ros/service_client/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  service_client-srv.asd
devel/share/my_service/cmake/: my_serviceConfig.cmake
devel/share/my_test/cmake/: my_testConfig.cmake
devel/share/ros_mobile_robot/cmake/: ros_mobile_robotConfig.cmake
devel/share/roseus/ros/my_service/: manifest.l
devel/share/roseus/ros/my_test/: manifest.l
devel/share/roseus/ros/service_client/: manifest.l
devel/share/roseus/ros/service_client_server/: manifest.l
devel/share/service_client/cmake/: service_client-msg-extras.cmake  service_client-msg-paths.cmake  service_clientConfig.cmake
devel/share/service_client_server/cmake/: service_client_server-msg-paths.cmake  service_client_serverConfig.cmake
src/my_service/: CMakeLists.txt  package.xml
src/my_service/src/: service_AddTwoInts.cpp
src/my_test/: CMakeLists.txt  package.xml
src/my_test/scripts/: control_robot.cpp  pid.cpp  pub_sub.cpp  publisher.cpp  subscriber.cpp
src/ros_mobile_robot/launch/: mobile_robot2.launch
src/ros_mobile_robot/urdf/: mobile_robot.rviz  mobile_robot.urdf
src/service_client_server/: CMakeLists.txt
src/service_client_server/src/: AddTwoInts_client.cpp  AddTwoInts_server.cpp
(+12 files in other folders)
